heart count functionality added

--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
         <button
           class="flex gap-[10px] bg-[#edfff1] rounded-[50px] px-[15px] py-[5px] lg:px-[35px] lg:py-[14px] font-bold"
         >
-          0 <img class="w-[20px]" src="assets/heart.png" alt="" />
+          <p id="heart-count">0</p>
+          <img class="w-[20px]" src="assets/heart.png" alt="" />
         </button>
         <button
           class="flex gap-[10px] bg-[#edfff1] rounded-[50px] px-[15px] py-[5px] lg:px-[35px] lg:py-[14px] font-bold"
@@ -86,7 +87,7 @@
                 alt=""
               />
             </div>
-            <i class="fa-regular fa-heart"></i>
+            <i class="fa-regular fa-heart heart-icon"></i>
           </div>
           <div>
             <h3 class="text-[18px] font-bold">জাতীয় জরুরি সেবা</h3>
@@ -124,7 +125,7 @@
                 alt=""
               />
             </div>
-            <i class="fa-regular fa-heart"></i>
+            <i class="fa-regular fa-heart heart-icon"></i>
           </div>
           <div>
             <h3 class="text-[18px] font-bold">পুলিশ</h3>
@@ -162,7 +163,7 @@
                 alt=""
               />
             </div>
-            <i class="fa-regular fa-heart"></i>
+            <i class="fa-regular fa-heart heart-icon"></i>
           </div>
           <div>
             <h3 class="text-[18px] font-bold">ফায়ার সার্ভিস</h3>
@@ -201,7 +202,7 @@
                 alt=""
               />
             </div>
-            <i class="fa-regular fa-heart"></i>
+            <i class="fa-regular fa-heart heart-icon"></i>
           </div>
           <div>
             <h3 class="text-[18px] font-bold">অ্যাম্বুলেন্স</h3>
@@ -239,7 +240,7 @@
                 alt=""
               />
             </div>
-            <i class="fa-regular fa-heart"></i>
+            <i class="fa-regular fa-heart heart-icon"></i>
           </div>
           <div>
             <h3 class="text-[18px] font-bold">নারী ও শিশু সহায়তা</h3>
@@ -279,7 +280,7 @@
                 alt=""
               />
             </div>
-            <i class="fa-regular fa-heart"></i>
+            <i class="fa-regular fa-heart heart-icon"></i>
           </div>
           <div>
             <h3 class="text-[18px] font-bold">দুদক</h3>
@@ -317,7 +318,7 @@
                 alt=""
               />
             </div>
-            <i class="fa-regular fa-heart"></i>
+            <i class="fa-regular fa-heart heart-icon"></i>
           </div>
           <div>
             <h3 class="text-[18px] font-bold">বিদ্যুৎ বিভ্রাট</h3>
@@ -355,7 +356,7 @@
                 alt=""
               />
             </div>
-            <i class="fa-regular fa-heart"></i>
+            <i class="fa-regular fa-heart heart-icon"></i>
           </div>
           <div>
             <h3 class="text-[18px] font-bold">ব্র্যাক</h3>
@@ -393,7 +394,7 @@
                 alt=""
               />
             </div>
-            <i class="fa-regular fa-heart"></i>
+            <i class="fa-regular fa-heart heart-icon"></i>
           </div>
           <div>
             <h3 class="text-[18px] font-bold">বাংলাদেশ রেলওয়ে</h3>
