--- a/index.html
+++ b/index.html
@@ -41,12 +41,13 @@
         <button
           class="flex gap-[10px] bg-[#edfff1] rounded-[50px] px-[15px] py-[5px] lg:px-[35px] lg:py-[14px] font-bold"
         >
-          100 <img class="w-[20px]" src="assets/coin.png" alt="" />
+          <p id="coin-count">100</p>
+          <img class="w-[20px]" src="assets/coin.png" alt="" />
         </button>
         <button
           class="text-white bg-[#00a63e] rounded-[50px] px-[15px] py-[5px] lg:px-[35px] lg:py-[14px] font-bold"
         >
-          2 Copy
+          0 Copy
         </button>
       </div>
     </nav>
@@ -106,7 +107,7 @@
               <i class="fa-regular fa-copy"></i> Copy
             </button>
             <button
-              class="flex-1 text-white bg-[#00a63e] rounded-[8px] text-[1rem] py-[6px] lg:py-[10px]"
+              class="call-button flex-1 text-white bg-[#00a63e] rounded-[8px] text-[1rem] py-[6px] lg:py-[10px]"
             >
               <i class="fa-solid fa-phone"></i> Call
             </button>
@@ -144,7 +145,7 @@
               <i class="fa-regular fa-copy"></i> Copy
             </button>
             <button
-              class="flex-1 text-white bg-[#00a63e] rounded-[8px] text-[1rem] py-[6px] lg:py-[10px]"
+              class="call-button flex-1 text-white bg-[#00a63e] rounded-[8px] text-[1rem] py-[6px] lg:py-[10px]"
             >
               <i class="fa-solid fa-phone"></i> Call
             </button>
@@ -182,7 +183,7 @@
               <i class="fa-regular fa-copy"></i> Copy
             </button>
             <button
-              class="flex-1 text-white bg-[#00a63e] rounded-[8px] text-[1rem] py-[6px] lg:py-[10px]"
+              class="call-button flex-1 text-white bg-[#00a63e] rounded-[8px] text-[1rem] py-[6px] lg:py-[10px]"
             >
               <i class="fa-solid fa-phone"></i> Call
             </button>
@@ -221,7 +222,7 @@
               <i class="fa-regular fa-copy"></i> Copy
             </button>
             <button
-              class="flex-1 text-white bg-[#00a63e] rounded-[8px] text-[1rem] py-[6px] lg:py-[10px]"
+              class="call-button flex-1 text-white bg-[#00a63e] rounded-[8px] text-[1rem] py-[6px] lg:py-[10px]"
             >
               <i class="fa-solid fa-phone"></i> Call
             </button>
@@ -261,7 +262,7 @@
               <i class="fa-regular fa-copy"></i> Copy
             </button>
             <button
-              class="flex-1 text-white bg-[#00a63e] rounded-[8px] text-[1rem] py-[6px] lg:py-[10px]"
+              class="call-button flex-1 text-white bg-[#00a63e] rounded-[8px] text-[1rem] py-[6px] lg:py-[10px]"
             >
               <i class="fa-solid fa-phone"></i> Call
             </button>
@@ -299,7 +300,7 @@
               <i class="fa-regular fa-copy"></i> Copy
             </button>
             <button
-              class="flex-1 text-white bg-[#00a63e] rounded-[8px] text-[1rem] py-[6px] lg:py-[10px]"
+              class="call-button flex-1 text-white bg-[#00a63e] rounded-[8px] text-[1rem] py-[6px] lg:py-[10px]"
             >
               <i class="fa-solid fa-phone"></i> Call
             </button>
@@ -337,7 +338,7 @@
               <i class="fa-regular fa-copy"></i> Copy
             </button>
             <button
-              class="flex-1 text-white bg-[#00a63e] rounded-[8px] text-[1rem] py-[6px] lg:py-[10px]"
+              class="call-button flex-1 text-white bg-[#00a63e] rounded-[8px] text-[1rem] py-[6px] lg:py-[10px]"
             >
               <i class="fa-solid fa-phone"></i> Call
             </button>
@@ -375,7 +376,7 @@
               <i class="fa-regular fa-copy"></i> Copy
             </button>
             <button
-              class="flex-1 text-white bg-[#00a63e] rounded-[8px] text-[1rem] py-[6px] lg:py-[10px]"
+              class="call-button flex-1 text-white bg-[#00a63e] rounded-[8px] text-[1rem] py-[6px] lg:py-[10px]"
             >
               <i class="fa-solid fa-phone"></i> Call
             </button>
@@ -413,7 +414,7 @@
               <i class="fa-regular fa-copy"></i> Copy
             </button>
             <button
-              class="flex-1 text-white bg-[#00a63e] rounded-[8px] text-[1rem] py-[6px] lg:py-[10px]"
+              class="call-button flex-1 text-white bg-[#00a63e] rounded-[8px] text-[1rem] py-[6px] lg:py-[10px]"
             >
               <i class="fa-solid fa-phone"></i> Call
             </button>
@@ -423,7 +424,9 @@
       <figure
         class="lg:w-[350px] mx-auto bg-white p-[20px] lg:mb-0 mb-[30px] lg:p-[32px] rounded-[12px] shadow-lg"
       >
-        <div class="flex justify-between items-center rounded-[12px]">
+        <div
+          class="flex justifycall-button -between items-center rounded-[12px]"
+        >
           <h3 class="text-xl font-semibold">
             <i class="fa-solid fa-clock-rotate-left"></i> Call History
           </h3>
