--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
         class="lg:w-[350px] mx-auto bg-white p-[20px] lg:mb-0 mb-[30px] lg:p-[32px] rounded-[12px] shadow-lg"
       >
         <div
-          class="flex justifycall-button -between items-center rounded-[12px]"
+          class="flex justify-between call-button -between items-center rounded-[12px]"
         >
           <h3 class="text-xl font-semibold">
             <i class="fa-solid fa-clock-rotate-left"></i> Call History
