--- a/index.html
+++ b/index.html
@@ -91,9 +91,11 @@
             <i class="fa-regular fa-heart heart-icon"></i>
           </div>
           <div>
-            <h3 class="text-[18px] font-bold">জাতীয় জরুরি সেবা</h3>
+            <h3 class="service-name text-[18px] font-bold">
+              জাতীয় জরুরি সেবা
+            </h3>
             <p class="mb-[24px] text-lg text-[#5c5c5c]">National Emergency</p>
-            <h3 class="text-[28px] font-bold">999</h3>
+            <h3 class="service-number text-[28px] font-bold">999</h3>
             <button
               class="bg-[#f2f2f2] px-[16px] py-[6px] rounded-[50px] text-[16px] text-[#5c5c5c]"
             >
@@ -129,9 +131,9 @@
             <i class="fa-regular fa-heart heart-icon"></i>
           </div>
           <div>
-            <h3 class="text-[18px] font-bold">পুলিশ</h3>
+            <h3 class="service-name text-[18px] font-bold">পুলিশ</h3>
             <p class="mb-[24px] text-lg text-[#5c5c5c]">Police</p>
-            <h3 class="text-[28px] font-bold">999</h3>
+            <h3 class="service-number text-[28px] font-bold">999</h3>
             <button
               class="bg-[#f2f2f2] px-[16px] py-[6px] rounded-[50px] text-[16px] text-[#5c5c5c]"
             >
@@ -167,9 +169,9 @@
             <i class="fa-regular fa-heart heart-icon"></i>
           </div>
           <div>
-            <h3 class="text-[18px] font-bold">ফায়ার সার্ভিস</h3>
+            <h3 class="service-name text-[18px] font-bold">ফায়ার সার্ভিস</h3>
             <p class="mb-[24px] text-lg text-[#5c5c5c]">Fire Service</p>
-            <h3 class="text-[28px] font-bold">999</h3>
+            <h3 class="service-number text-[28px] font-bold">999</h3>
             <button
               class="bg-[#f2f2f2] px-[16px] py-[6px] rounded-[50px] text-[16px] text-[#5c5c5c]"
             >
@@ -206,9 +208,9 @@
             <i class="fa-regular fa-heart heart-icon"></i>
           </div>
           <div>
-            <h3 class="text-[18px] font-bold">অ্যাম্বুলেন্স</h3>
+            <h3 class="service-name text-[18px] font-bold">অ্যাম্বুলেন্স</h3>
             <p class="mb-[24px] text-lg text-[#5c5c5c]">Ambulance</p>
-            <h3 class="text-[28px] font-bold">1994-999999</h3>
+            <h3 class="service-number text-[28px] font-bold">1994-999999</h3>
             <button
               class="bg-[#f2f2f2] px-[16px] py-[6px] rounded-[50px] text-[16px] text-[#5c5c5c]"
             >
@@ -244,11 +246,13 @@
             <i class="fa-regular fa-heart heart-icon"></i>
           </div>
           <div>
-            <h3 class="text-[18px] font-bold">নারী ও শিশু সহায়তা</h3>
+            <h3 class="service-name text-[18px] font-bold">
+              নারী ও শিশু সহায়তা
+            </h3>
             <p class="mb-[24px] text-lg text-[#5c5c5c]">
               Women & Child Helpline
             </p>
-            <h3 class="text-[28px] font-bold">109</h3>
+            <h3 class="service-number text-[28px] font-bold">109</h3>
             <button
               class="bg-[#f2f2f2] px-[16px] py-[6px] rounded-[50px] text-[16px] text-[#5c5c5c]"
             >
@@ -284,9 +288,9 @@
             <i class="fa-regular fa-heart heart-icon"></i>
           </div>
           <div>
-            <h3 class="text-[18px] font-bold">দুদক</h3>
+            <h3 class="service-name text-[18px] font-bold">দুদক</h3>
             <p class="mb-[24px] text-lg text-[#5c5c5c]">Anti-Corruption</p>
-            <h3 class="text-[28px] font-bold">106</h3>
+            <h3 class="service-number text-[28px] font-bold">106</h3>
             <button
               class="bg-[#f2f2f2] px-[16px] py-[6px] rounded-[50px] text-[16px] text-[#5c5c5c]"
             >
@@ -322,9 +326,9 @@
             <i class="fa-regular fa-heart heart-icon"></i>
           </div>
           <div>
-            <h3 class="text-[18px] font-bold">বিদ্যুৎ বিভ্রাট</h3>
+            <h3 class="service-name text-[18px] font-bold">বিদ্যুৎ বিভ্রাট</h3>
             <p class="mb-[24px] text-lg text-[#5c5c5c]">Electricity Outage</p>
-            <h3 class="text-[28px] font-bold">16216</h3>
+            <h3 class="service-number text-[28px] font-bold">16216</h3>
             <button
               class="bg-[#f2f2f2] px-[16px] py-[6px] rounded-[50px] text-[16px] text-[#5c5c5c]"
             >
@@ -360,9 +364,9 @@
             <i class="fa-regular fa-heart heart-icon"></i>
           </div>
           <div>
-            <h3 class="text-[18px] font-bold">ব্র্যাক</h3>
+            <h3 class="service-name text-[18px] font-bold">ব্র্যাক</h3>
             <p class="mb-[24px] text-lg text-[#5c5c5c]">Brac</p>
-            <h3 class="text-[28px] font-bold">16445</h3>
+            <h3 class="service-number text-[28px] font-bold">16445</h3>
             <button
               class="bg-[#f2f2f2] px-[16px] py-[6px] rounded-[50px] text-[16px] text-[#5c5c5c]"
             >
@@ -398,9 +402,9 @@
             <i class="fa-regular fa-heart heart-icon"></i>
           </div>
           <div>
-            <h3 class="text-[18px] font-bold">বাংলাদেশ রেলওয়ে</h3>
+            <h3 class="service-name text-[18px] font-bold">বাংলাদেশ রেলওয়ে</h3>
             <p class="mb-[24px] text-lg text-[#5c5c5c]">Bangladesh Railway</p>
-            <h3 class="text-[28px] font-bold">163</h3>
+            <h3 class="service-number text-[28px] font-bold">163</h3>
             <button
               class="bg-[#f2f2f2] px-[16px] py-[6px] rounded-[50px] text-[16px] text-[#5c5c5c]"
             >
