history feature added clear history feature added

--- a/index.html
+++ b/index.html
@@ -435,20 +435,13 @@
             <i class="fa-solid fa-clock-rotate-left"></i> Call History
           </h3>
           <button
+            id="clear-button"
             class="text-white bg-[#00a63e] px-[36px] py-[14px] text-[1rem] rounded-[50px]"
           >
             Clear
           </button>
         </div>
-        <div
-          class="rounded-[8px] px-[18px] py-[16px] my-[16px] flex justify-between items-center bg-gray-100"
-        >
-          <div>
-            <h3 class="text-sm font-semibold">ফায়ার সার্ভিস</h3>
-            <p class="text-[#5c5c5c] font-semibold">999</p>
-          </div>
-          <div class="text-xs">11:36:58 AM</div>
-        </div>
+        <div id="call-history"></div>
       </figure>
     </section>
     <script src="index.js"></script>
