--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     >
       <!-- logo -->
       <div
-        class="flex mb-[20px] lg:justify-normal justify-center items-center text-[#006747] items-center gap-[10px] font-extrabold lg:w-[195px] text-xl"
+        class="flex mb-[20px] lg:justify-normal justify-center items-center text-[#006747] gap-[10px] font-extrabold lg:w-[195px] text-xl"
       >
         <img class="w-[50px] h-[50px]" src="assets/logo.png" alt="" />
         <p>Emergency Service</p>
@@ -45,6 +45,7 @@
           <img class="w-[20px]" src="assets/coin.png" alt="" />
         </button>
         <button
+          id="copy-number"
           class="text-white bg-[#00a63e] rounded-[50px] px-[15px] py-[5px] lg:px-[35px] lg:py-[14px] font-bold"
         >
           0 Copy
@@ -104,7 +105,7 @@
           </div>
           <div class="flex gap-3 mt-[24px]">
             <button
-              class="flex-1 border border-[#d4d6d5] rounded-[8px] text-[1rem] text-[#5c5c5c] py-[6px] lg:py-[10px]"
+              class="copy-button flex-1 border border-[#d4d6d5] rounded-[8px] text-[1rem] text-[#5c5c5c] py-[6px] lg:py-[10px]"
             >
               <i class="fa-regular fa-copy"></i> Copy
             </button>
@@ -142,7 +143,7 @@
           </div>
           <div class="flex gap-3 mt-[24px]">
             <button
-              class="flex-1 border border-[#d4d6d5] rounded-[8px] text-[1rem] text-[#5c5c5c] py-[6px] lg:py-[10px]"
+              class="copy-button flex-1 border border-[#d4d6d5] rounded-[8px] text-[1rem] text-[#5c5c5c] py-[6px] lg:py-[10px]"
             >
               <i class="fa-regular fa-copy"></i> Copy
             </button>
@@ -180,7 +181,7 @@
           </div>
           <div class="flex gap-3 mt-[24px]">
             <button
-              class="flex-1 border border-[#d4d6d5] rounded-[8px] text-[1rem] text-[#5c5c5c] py-[6px] lg:py-[10px]"
+              class="copy-button flex-1 border border-[#d4d6d5] rounded-[8px] text-[1rem] text-[#5c5c5c] py-[6px] lg:py-[10px]"
             >
               <i class="fa-regular fa-copy"></i> Copy
             </button>
@@ -219,7 +220,7 @@
           </div>
           <div class="flex gap-3 mt-[24px]">
             <button
-              class="flex-1 border border-[#d4d6d5] rounded-[8px] text-[1rem] text-[#5c5c5c] py-[6px] lg:py-[10px]"
+              class="copy-button flex-1 border border-[#d4d6d5] rounded-[8px] text-[1rem] text-[#5c5c5c] py-[6px] lg:py-[10px]"
             >
               <i class="fa-regular fa-copy"></i> Copy
             </button>
@@ -261,7 +262,7 @@
           </div>
           <div class="flex gap-3 mt-[24px]">
             <button
-              class="flex-1 border border-[#d4d6d5] rounded-[8px] text-[1rem] text-[#5c5c5c] py-[6px] lg:py-[10px]"
+              class="copy-button flex-1 border border-[#d4d6d5] rounded-[8px] text-[1rem] text-[#5c5c5c] py-[6px] lg:py-[10px]"
             >
               <i class="fa-regular fa-copy"></i> Copy
             </button>
@@ -299,7 +300,7 @@
           </div>
           <div class="flex gap-3 mt-[24px]">
             <button
-              class="flex-1 border border-[#d4d6d5] rounded-[8px] text-[1rem] text-[#5c5c5c] py-[6px] lg:py-[10px]"
+              class="copy-button flex-1 border border-[#d4d6d5] rounded-[8px] text-[1rem] text-[#5c5c5c] py-[6px] lg:py-[10px]"
             >
               <i class="fa-regular fa-copy"></i> Copy
             </button>
@@ -337,7 +338,7 @@
           </div>
           <div class="flex gap-3 mt-[24px]">
             <button
-              class="flex-1 border border-[#d4d6d5] rounded-[8px] text-[1rem] text-[#5c5c5c] py-[6px] lg:py-[10px]"
+              class="copy-button flex-1 border border-[#d4d6d5] rounded-[8px] text-[1rem] text-[#5c5c5c] py-[6px] lg:py-[10px]"
             >
               <i class="fa-regular fa-copy"></i> Copy
             </button>
@@ -375,7 +376,7 @@
           </div>
           <div class="flex gap-3 mt-[24px]">
             <button
-              class="flex-1 border border-[#d4d6d5] rounded-[8px] text-[1rem] text-[#5c5c5c] py-[6px] lg:py-[10px]"
+              class="copy-button flex-1 border border-[#d4d6d5] rounded-[8px] text-[1rem] text-[#5c5c5c] py-[6px] lg:py-[10px]"
             >
               <i class="fa-regular fa-copy"></i> Copy
             </button>
@@ -413,7 +414,7 @@
           </div>
           <div class="flex gap-3 mt-[24px]">
             <button
-              class="flex-1 border border-[#d4d6d5] rounded-[8px] text-[1rem] text-[#5c5c5c] py-[6px] lg:py-[10px]"
+              class="copy-button flex-1 border border-[#d4d6d5] rounded-[8px] text-[1rem] text-[#5c5c5c] py-[6px] lg:py-[10px]"
             >
               <i class="fa-regular fa-copy"></i> Copy
             </button>
