heart count and coin count icon height changed to 20px and made them centered vertically

--- a/index.html
+++ b/index.html
@@ -33,16 +33,16 @@
         class="flex gap-[10px] px-[20px] lg:px-0 lg:gap-[20px] justify-center"
       >
         <button
-          class="flex gap-[10px] bg-[#edfff1] rounded-[50px] px-[15px] py-[5px] lg:px-[35px] lg:py-[14px] font-bold"
+          class="flex items-center gap-[10px] bg-[#edfff1] rounded-[50px] px-[15px] py-[5px] lg:px-[35px] lg:py-[14px] font-bold"
         >
           <p id="heart-count">0</p>
-          <img class="w-[20px]" src="assets/heart.png" alt="" />
+          <img class="w-[20px] h-[20px]" src="assets/heart.png" alt="" />
         </button>
         <button
-          class="flex gap-[10px] bg-[#edfff1] rounded-[50px] px-[15px] py-[5px] lg:px-[35px] lg:py-[14px] font-bold"
+          class="flex items-center gap-[10px] bg-[#edfff1] rounded-[50px] px-[15px] py-[5px] lg:px-[35px] lg:py-[14px] font-bold"
         >
           <p id="coin-count">100</p>
-          <img class="w-[20px]" src="assets/coin.png" alt="" />
+          <img class="w-[20px] h-[20px]" src="assets/coin.png" alt="" />
         </button>
         <button
           id="copy-number"
@@ -89,7 +89,7 @@
                 alt=""
               />
             </div>
-            <i class="fa-regular fa-heart heart-icon"></i>
+            <i class="fa-regular fa-heart heart-icon cursor-pointer"></i>
           </div>
           <div>
             <h3 class="service-name text-[18px] font-bold">
@@ -105,12 +105,12 @@
           </div>
           <div class="flex gap-3 mt-[24px]">
             <button
-              class="copy-button flex-1 border border-[#d4d6d5] rounded-[8px] text-[1rem] text-[#5c5c5c] py-[6px] lg:py-[10px]"
+              class="copy-button hover:bg-gray-500 cursor-pointer hover:text-white transition-all duration-[0.3s] flex-1 border border-[#d4d6d5] rounded-[8px] text-[1rem] text-[#5c5c5c] py-[6px] lg:py-[10px]"
             >
               <i class="fa-regular fa-copy"></i> Copy
             </button>
             <button
-              class="call-button flex-1 text-white bg-[#00a63e] rounded-[8px] text-[1rem] py-[6px] lg:py-[10px]"
+              class="call-button cursor-pointer hover:bg-gray-400 transition-all duration-[0.3s] flex-1 text-white bg-[#00a63e] rounded-[8px] text-[1rem] py-[6px] lg:py-[10px]"
             >
               <i class="fa-solid fa-phone"></i> Call
             </button>
@@ -129,7 +129,7 @@
                 alt=""
               />
             </div>
-            <i class="fa-regular fa-heart heart-icon"></i>
+            <i class="fa-regular fa-heart heart-icon cursor-pointer"></i>
           </div>
           <div>
             <h3 class="service-name text-[18px] font-bold">পুলিশ</h3>
@@ -143,12 +143,12 @@
           </div>
           <div class="flex gap-3 mt-[24px]">
             <button
-              class="copy-button flex-1 border border-[#d4d6d5] rounded-[8px] text-[1rem] text-[#5c5c5c] py-[6px] lg:py-[10px]"
+              class="copy-button hover:bg-gray-500 cursor-pointer hover:text-white transition-all duration-[0.3s] flex-1 border border-[#d4d6d5] rounded-[8px] text-[1rem] text-[#5c5c5c] py-[6px] lg:py-[10px]"
             >
               <i class="fa-regular fa-copy"></i> Copy
             </button>
             <button
-              class="call-button flex-1 text-white bg-[#00a63e] rounded-[8px] text-[1rem] py-[6px] lg:py-[10px]"
+              class="call-button cursor-pointer hover:bg-gray-400 transition-all duration-[0.3s] flex-1 text-white bg-[#00a63e] rounded-[8px] text-[1rem] py-[6px] lg:py-[10px]"
             >
               <i class="fa-solid fa-phone"></i> Call
             </button>
@@ -167,7 +167,7 @@
                 alt=""
               />
             </div>
-            <i class="fa-regular fa-heart heart-icon"></i>
+            <i class="fa-regular fa-heart heart-icon cursor-pointer"></i>
           </div>
           <div>
             <h3 class="service-name text-[18px] font-bold">ফায়ার সার্ভিস</h3>
@@ -181,12 +181,12 @@
           </div>
           <div class="flex gap-3 mt-[24px]">
             <button
-              class="copy-button flex-1 border border-[#d4d6d5] rounded-[8px] text-[1rem] text-[#5c5c5c] py-[6px] lg:py-[10px]"
+              class="copy-button hover:bg-gray-500 cursor-pointer hover:text-white transition-all duration-[0.3s] flex-1 border border-[#d4d6d5] rounded-[8px] text-[1rem] text-[#5c5c5c] py-[6px] lg:py-[10px]"
             >
               <i class="fa-regular fa-copy"></i> Copy
             </button>
             <button
-              class="call-button flex-1 text-white bg-[#00a63e] rounded-[8px] text-[1rem] py-[6px] lg:py-[10px]"
+              class="call-button cursor-pointer hover:bg-gray-400 transition-all duration-[0.3s] flex-1 text-white bg-[#00a63e] rounded-[8px] text-[1rem] py-[6px] lg:py-[10px]"
             >
               <i class="fa-solid fa-phone"></i> Call
             </button>
@@ -206,7 +206,7 @@
                 alt=""
               />
             </div>
-            <i class="fa-regular fa-heart heart-icon"></i>
+            <i class="fa-regular fa-heart heart-icon cursor-pointer"></i>
           </div>
           <div>
             <h3 class="service-name text-[18px] font-bold">অ্যাম্বুলেন্স</h3>
@@ -220,12 +220,12 @@
           </div>
           <div class="flex gap-3 mt-[24px]">
             <button
-              class="copy-button flex-1 border border-[#d4d6d5] rounded-[8px] text-[1rem] text-[#5c5c5c] py-[6px] lg:py-[10px]"
+              class="copy-button hover:bg-gray-500 cursor-pointer hover:text-white transition-all duration-[0.3s] flex-1 border border-[#d4d6d5] rounded-[8px] text-[1rem] text-[#5c5c5c] py-[6px] lg:py-[10px]"
             >
               <i class="fa-regular fa-copy"></i> Copy
             </button>
             <button
-              class="call-button flex-1 text-white bg-[#00a63e] rounded-[8px] text-[1rem] py-[6px] lg:py-[10px]"
+              class="call-button cursor-pointer hover:bg-gray-400 transition-all duration-[0.3s] flex-1 text-white bg-[#00a63e] rounded-[8px] text-[1rem] py-[6px] lg:py-[10px]"
             >
               <i class="fa-solid fa-phone"></i> Call
             </button>
@@ -244,7 +244,7 @@
                 alt=""
               />
             </div>
-            <i class="fa-regular fa-heart heart-icon"></i>
+            <i class="fa-regular fa-heart heart-icon cursor-pointer"></i>
           </div>
           <div>
             <h3 class="service-name text-[18px] font-bold">
@@ -262,12 +262,12 @@
           </div>
           <div class="flex gap-3 mt-[24px]">
             <button
-              class="copy-button flex-1 border border-[#d4d6d5] rounded-[8px] text-[1rem] text-[#5c5c5c] py-[6px] lg:py-[10px]"
+              class="copy-button hover:bg-gray-500 cursor-pointer hover:text-white transition-all duration-[0.3s] flex-1 border border-[#d4d6d5] rounded-[8px] text-[1rem] text-[#5c5c5c] py-[6px] lg:py-[10px]"
             >
               <i class="fa-regular fa-copy"></i> Copy
             </button>
             <button
-              class="call-button flex-1 text-white bg-[#00a63e] rounded-[8px] text-[1rem] py-[6px] lg:py-[10px]"
+              class="call-button cursor-pointer hover:bg-gray-400 transition-all duration-[0.3s] flex-1 text-white bg-[#00a63e] rounded-[8px] text-[1rem] py-[6px] lg:py-[10px]"
             >
               <i class="fa-solid fa-phone"></i> Call
             </button>
@@ -286,7 +286,7 @@
                 alt=""
               />
             </div>
-            <i class="fa-regular fa-heart heart-icon"></i>
+            <i class="fa-regular fa-heart heart-icon cursor-pointer"></i>
           </div>
           <div>
             <h3 class="service-name text-[18px] font-bold">দুদক</h3>
@@ -300,12 +300,12 @@
           </div>
           <div class="flex gap-3 mt-[24px]">
             <button
-              class="copy-button flex-1 border border-[#d4d6d5] rounded-[8px] text-[1rem] text-[#5c5c5c] py-[6px] lg:py-[10px]"
+              class="copy-button hover:bg-gray-500 cursor-pointer hover:text-white transition-all duration-[0.3s] flex-1 border border-[#d4d6d5] rounded-[8px] text-[1rem] text-[#5c5c5c] py-[6px] lg:py-[10px]"
             >
               <i class="fa-regular fa-copy"></i> Copy
             </button>
             <button
-              class="call-button flex-1 text-white bg-[#00a63e] rounded-[8px] text-[1rem] py-[6px] lg:py-[10px]"
+              class="call-button cursor-pointer hover:bg-gray-400 transition-all duration-[0.3s] flex-1 text-white bg-[#00a63e] rounded-[8px] text-[1rem] py-[6px] lg:py-[10px]"
             >
               <i class="fa-solid fa-phone"></i> Call
             </button>
@@ -324,7 +324,7 @@
                 alt=""
               />
             </div>
-            <i class="fa-regular fa-heart heart-icon"></i>
+            <i class="fa-regular fa-heart heart-icon cursor-pointer"></i>
           </div>
           <div>
             <h3 class="service-name text-[18px] font-bold">বিদ্যুৎ বিভ্রাট</h3>
@@ -338,12 +338,12 @@
           </div>
           <div class="flex gap-3 mt-[24px]">
             <button
-              class="copy-button flex-1 border border-[#d4d6d5] rounded-[8px] text-[1rem] text-[#5c5c5c] py-[6px] lg:py-[10px]"
+              class="copy-button hover:bg-gray-500 cursor-pointer hover:text-white transition-all duration-[0.3s] flex-1 border border-[#d4d6d5] rounded-[8px] text-[1rem] text-[#5c5c5c] py-[6px] lg:py-[10px]"
             >
               <i class="fa-regular fa-copy"></i> Copy
             </button>
             <button
-              class="call-button flex-1 text-white bg-[#00a63e] rounded-[8px] text-[1rem] py-[6px] lg:py-[10px]"
+              class="call-button cursor-pointer hover:bg-gray-400 transition-all duration-[0.3s] flex-1 text-white bg-[#00a63e] rounded-[8px] text-[1rem] py-[6px] lg:py-[10px]"
             >
               <i class="fa-solid fa-phone"></i> Call
             </button>
@@ -362,7 +362,7 @@
                 alt=""
               />
             </div>
-            <i class="fa-regular fa-heart heart-icon"></i>
+            <i class="fa-regular fa-heart heart-icon cursor-pointer"></i>
           </div>
           <div>
             <h3 class="service-name text-[18px] font-bold">ব্র্যাক</h3>
@@ -376,12 +376,12 @@
           </div>
           <div class="flex gap-3 mt-[24px]">
             <button
-              class="copy-button flex-1 border border-[#d4d6d5] rounded-[8px] text-[1rem] text-[#5c5c5c] py-[6px] lg:py-[10px]"
+              class="copy-button hover:bg-gray-500 cursor-pointer hover:text-white transition-all duration-[0.3s] flex-1 border border-[#d4d6d5] rounded-[8px] text-[1rem] text-[#5c5c5c] py-[6px] lg:py-[10px]"
             >
               <i class="fa-regular fa-copy"></i> Copy
             </button>
             <button
-              class="call-button flex-1 text-white bg-[#00a63e] rounded-[8px] text-[1rem] py-[6px] lg:py-[10px]"
+              class="call-button cursor-pointer hover:bg-gray-400 transition-all duration-[0.3s] flex-1 text-white bg-[#00a63e] rounded-[8px] text-[1rem] py-[6px] lg:py-[10px]"
             >
               <i class="fa-solid fa-phone"></i> Call
             </button>
@@ -400,7 +400,7 @@
                 alt=""
               />
             </div>
-            <i class="fa-regular fa-heart heart-icon"></i>
+            <i class="fa-regular fa-heart heart-icon cursor-pointer"></i>
           </div>
           <div>
             <h3 class="service-name text-[18px] font-bold">বাংলাদেশ রেলওয়ে</h3>
@@ -414,12 +414,12 @@
           </div>
           <div class="flex gap-3 mt-[24px]">
             <button
-              class="copy-button flex-1 border border-[#d4d6d5] rounded-[8px] text-[1rem] text-[#5c5c5c] py-[6px] lg:py-[10px]"
+              class="copy-button hover:bg-gray-500 cursor-pointer hover:text-white transition-all duration-[0.3s] flex-1 border border-[#d4d6d5] rounded-[8px] text-[1rem] text-[#5c5c5c] py-[6px] lg:py-[10px]"
             >
               <i class="fa-regular fa-copy"></i> Copy
             </button>
             <button
-              class="call-button flex-1 text-white bg-[#00a63e] rounded-[8px] text-[1rem] py-[6px] lg:py-[10px]"
+              class="call-button cursor-pointer hover:bg-gray-400 transition-all duration-[0.3s] flex-1 text-white bg-[#00a63e] rounded-[8px] text-[1rem] py-[6px] lg:py-[10px]"
             >
               <i class="fa-solid fa-phone"></i> Call
             </button>
@@ -435,7 +435,7 @@
           </h3>
           <button
             id="clear-button"
-            class="text-white bg-[#00a63e] px-[36px] py-[14px] text-[1rem] rounded-[50px]"
+            class="hover:bg-gray-400 transition-all duration-[0.3s] cursor-pointer text-white bg-[#00a63e] px-[36px] py-[14px] text-[1rem] rounded-[50px]"
           >
             Clear
           </button>
