nav bar logo bottom margin removed

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     >
       <!-- logo -->
       <div
-        class="flex mb-[20px] lg:justify-normal justify-center items-center text-[#006747] gap-[10px] font-extrabold lg:w-[195px] text-xl"
+        class="flex lg:justify-normal justify-center items-center text-[#006747] gap-[10px] font-extrabold lg:w-[195px] text-xl"
       >
         <img class="w-[50px] h-[50px]" src="assets/logo.png" alt="" />
         <p>Emergency Service</p>
